マンデルブロ描写スクリプトの作成。

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
 
 SPREADSHEET_FILE_ID="hogehoge"
 SPREADSHEET_SHEET_NAME="Sheet1"
+
+WIDTH=100
+HEIGHT=100
+X_MIN=-2.0
+X_MAX=1.0
+Y_MIN=-1.5
+Y_MAX=1.5
+MAX_ITERATIONS=1000
+
+CELL_SIZE=5
